--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
                     class="text-white fw-bold">Free
                     Counsultancy</span></span>
             <ul class="upperbar__icons m-0 p-0 pe-3 d-flex">
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://www.facebook.com/profile.php?id=100090033521652&is_tour_dismissed=true"
+                        target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://twitter.com/msaratalminasa" target="_blank"><i
+                            class="fa-brands fa-twitter"></i></a></li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://www.instagram.com/msaratalminasa/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
             </ul>
         </div>
     </section>
@@ -69,7 +75,8 @@
                         <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>address</p>
-                            <a href="#map">Salah Al-Din Al-Ayyubi St. Riyadh-Al-Malaz District</a>
+                            <a href="./contact/contact.html#map">Salah Al-Din Al-Ayyubi <br> St. Riyadh-Al-Malaz
+                                District</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +106,7 @@
             <li><a class="text-white" href="./contact/contact.html">Contact us</a></li>
             <li><a class="text-white" href="./index-ar.html">عربي</a></li>
         </ul>
-        <button class="fontf__oswald">get a quote</button>
+        <button class="fontf__oswald"><a class="text-white" href="#quote">get a quote</a></button>
     </nav>
 
     <div class="mobile-nav__overlay"></div>
@@ -141,7 +148,7 @@
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
-                <a href="#map">28st. Msadak</a>
+                <a href="./contact/contact.html#map">Salah Al-Din Al-Ayyubi<br> St. Riyadh-Al-Malaz District</a>
             </span>
         </div>
     </nav>
@@ -153,7 +160,7 @@
                 <div class="container">
                     <div class="hero__content">
                         <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
-                        <h1>Masarat Al Mina It is<br> your first choice</h1>
+                        <h1>Masarat Al Mina is<br> your first choice</h1>
                         <div>
                             <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color"
                                     href="#">Contact Us</a></button>
@@ -166,7 +173,7 @@
                 <div class="container">
                     <div class="hero__content">
                         <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
-                        <h1>Masarat Al Mina It is<br> your first choice</h1>
+                        <h2>Masarat Al Mina is<br> your first choice</h2>
                         <div>
                             <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
                             <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
@@ -178,7 +185,7 @@
                 <div class="container">
                     <div class="hero__content">
                         <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
-                        <h1>Masarat Al Mina It is<br> your first choice</h1>
+                        <h2>Masarat Al Mina is<br> your first choice</h2>
                         <div>
                             <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
                             <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
@@ -236,7 +243,7 @@
                 </div>
                 <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5">
                     <span class="text_red_color fw-bold">About Us</span>
-                    <h2 class="text_main_color fs-1 mb-4">Masarat Al Mina It is your first choice</h2>
+                    <h2 class="text_main_color fs-1 mb-4">Masarat Al Mina is your first choice</h2>
                     <p class="text-color">With professionalism and craftsmanship that exceeded twenty years of
                         experience, (Masarat
                         Al-Mina) for customs clearance has become one of the pioneers of companies</p>
@@ -380,7 +387,7 @@
     </section>
 
     <!-- Start Request A quote  -->
-    <section class="quote mb-5">
+    <section id="quote" class="quote mb-5">
         <div class="container">
             <div class="row justify-content-end">
                 <div class="col-12 col-md-8 col-lg-8">
