--- a/outlets/air/air.html
+++ b/outlets/air/air.html
@@ -26,11 +26,17 @@
                     class="text-white fw-bold">Free
                     Counsultancy</span></span>
             <ul class="upperbar__icons m-0 p-0 pe-3 d-flex">
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://www.facebook.com/profile.php?id=100090033521652&is_tour_dismissed=true"
+                        target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://twitter.com/msaratalminasa" target="_blank"><i
+                            class="fa-brands fa-twitter"></i></a></li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://www.instagram.com/msaratalminasa/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
             </ul>
         </div>
     </section>
@@ -61,7 +67,8 @@
                         <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>address</p>
-                            <a href="#map">Salah Al-Din Al-Ayyubi St. Riyadh-Al-Malaz District</a>
+                            <a href="../../contact/contact.html#map">Salah Al-Din Al-Ayyubi <br> St. Riyadh-Al-Malaz
+                                District</a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +98,7 @@
             <li><a class="text-white" href="../../contact/contact.html">Contact us</a></li>
             <li><a class="text-white" href="./air-ar.html">عربي</a></li>
         </ul>
-        <button class="fontf__oswald">get a quote</button>
+        <button class="fontf__oswald"><a href="../../index.html#quote">get a quote</a></button>
     </nav>
 
     <div class="mobile-nav__overlay"></div>
@@ -132,7 +139,7 @@
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
-                <a href="#map">28st. Msadak</a>
+                <a href="../../contact/contact.html#map">Salah Al-Din Al-Ayyubi<br> St. Riyadh-Al-Malaz District</a>
             </span>
         </div>
     </nav>
