--- a/index-ar.html
+++ b/index-ar.html
@@ -34,11 +34,17 @@
                     class="text-white fw-bold"> استشارة
                     مجانية </span></span>
             <ul class="upperbar__icons m-0 p-0 pe-3 d-flex">
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
-                <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://www.facebook.com/profile.php?id=100090033521652&is_tour_dismissed=true"
+                        target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://twitter.com/msaratalminasa" target="_blank"><i
+                            class="fa-brands fa-twitter"></i></a></li>
+                <li class="bg_red_color d-block p-2 text-white"><a class="text-white"
+                        href="https://www.instagram.com/msaratalminasa/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
             </ul>
         </div>
     </section>
@@ -69,7 +75,8 @@
                         <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>العنوان</p>
-                            <a href="#map">الرياض- حي الملز -الشارع :طريق صلاح الدين الايوبي</a>
+                            <a href="./contact/contact-ar.html#map">الرياض- حي الملز <br>-الشارع :طريق صلاح الدين
+                                الايوبي</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +106,7 @@
             <li><a class="text-white" href="./contact/contact-ar.html">تواصل معنا</a></li>
             <li><a class="text-white" href="./index.html">English</a></li>
         </ul>
-        <button class="fontf__oswald">طلب سعر </button>
+        <button class="fontf__oswald"><a class="text-white" href="#quote">طلب سعر</a></button>
     </nav>
 
     <div class="mobile-nav__overlay"></div>
@@ -140,7 +147,7 @@
             </span>
             <span>
                 <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
-                <a href="#map">28st. Msadak</a>
+                <a href="./contact/contact-ar.html#map">الرياض- حي الملز <br>-الشارع :طريق صلاح الدين الايوبي</a>
             </span>
         </div>
     </nav>
@@ -371,7 +378,7 @@
     </section>
 
     <!-- Start Request A quote  -->
-    <section class="quote mb-5">
+    <section id="quote" class="quote mb-5 scale">
         <div class="container">
             <div class="row justify-content-end">
                 <div class="col-12 col-md-8 col-lg-8">
